# substrate-node-custom-rpc

./: .gitignore  Cargo.toml  Dockerfile  README.md  customSpec.json  docker-compose.yml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml
jsons/: rpcs.json  types.json
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs  vm_config.rs
pallets/currencies/: Cargo.toml
pallets/currencies/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/groupsign/: Cargo.toml
pallets/groupsign/src/: lib.rs  mock.rs  tests.rs  utils.rs  weights.rs
pallets/sp-mvm/: Cargo.toml
pallets/sp-mvm/assets/src/: lib.rs
pallets/sp-mvm/primitives/: Cargo.toml
pallets/sp-mvm/primitives/src/: currency.rs  lib.rs
pallets/sp-mvm/rpc/: Cargo.toml
pallets/sp-mvm/rpc/runtime/: Cargo.toml
pallets/sp-mvm/rpc/runtime/src/: lib.rs  types.rs
pallets/sp-mvm/rpc/src/: addr.rs  address.rs  api_state_view.rs  bytecode.rs  constant.rs  convert.rs  fn_call.rs  info.rs  lib.rs  model.rs  move_types.rs  wrappers.rs
pallets/sp-mvm/src/: addr.rs  balance.rs  benchmarking.rs  event.rs  gas.rs  lib.rs  mvm.rs  result.rs  storage.rs  types.rs  weights.rs
pallets/sp-mvm/tests/: balances.rs  gas.rs  modules.rs  multisig.rs  scripts.rs  vm.rs
pallets/sp-mvm/tests/assets/: build_assets.sh
pallets/sp-mvm/tests/assets/root/: Dove.toml  Move.toml
pallets/sp-mvm/tests/assets/user/: Dove.toml  Move.toml
pallets/sp-mvm/tests/benchmark_assets/: Dove.toml  Move.toml  build_assets.sh
pallets/sp-mvm/tests/common/: addr.rs  assets.rs  mock.rs  utils.rs  vm_config.rs
pallets/template/: Cargo.toml
pallets/template/rpc/: Cargo.toml
pallets/template/rpc/runtime-api/: Cargo.toml
pallets/template/rpc/src/: lib.rs
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/tests/assets/: build_assets.sh
runtime/src/tests/assets/user/: Dove.toml  Move.toml
scripts/: rpcs.json
