[package]
name = "sp-mvm"
authors = ["Pontem Network Team <https://pontem.network>"]
description = "FRAME pallet adding Move-lang support."
edition = "2021"
repository = "https://github.com/pontem-network/pontem"
version = "0.3.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies.log]
version = "0.4"
default-features = false

[dependencies.parity-scale-codec]
version = "3.0.0"
default-features = false
package = "parity-scale-codec"

[dependencies.parity-scale-codec-derive]
version = "3.0.0"
default-features = false
package = "parity-scale-codec-derive"

# Move, addition deps for addrs & results:

[dependencies.move-vm]
package = "mvm"
path="../../../sp-move-vm/mvm"
default-features = false
features = [ "move_stdlib" ]

[dependencies.move-core-types]
path="../../../sp-move-vm/language/move-core/types"
default-features = false

[dependencies.move-binary-format]
path="../../../sp-move-vm/language/move-binary-format"
default-features = false

[dependencies]
# move-resource-viewer = { package = "move-resource-viewer", git = "https://github.com/pontem-network/move.git", branch = "release-1.7.1" }

anyhow = { version = "1.0.43", default-features = false }
# serde = { version = "1.0", default-features = false ,  features = ["derive"],optional = true }
once_cell = { default-features = false, version = "1.5.2" }
# substrate:
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { default-features = false,  package = "frame-support", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37' }
frame-system = { default-features = false,  package = "frame-system", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37' }
frame-benchmarking = { default-features = false, optional = true, package = "frame-benchmarking", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37' }
sp-std = { default-features = false,  package = "sp-std", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37' }
sp-core = { default-features = false,  package = "sp-core", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37' }
timestamp = { default-features = false, package = "pallet-timestamp", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37' }
balances = { default-features = false, package = "pallet-balances", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37' }
# logging, `sp_runtime::print`:
sp-runtime = { default-features = false, package = "sp-runtime",  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37' }
groupsign = { path = "../groupsign", default-features = false }

sp-io = { default-features = false,  package = "sp-io", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37' }
getrandom = { version = "0.2.3", optional = true }

# Orml
orml-traits = { default-features = false,  package = "orml-traits", git = 'https://github.com/open-web3-stack/open-runtime-module-library' }

# serde is for lcs/bcs only
# used for benchmarking (runtime, std, no-std)
# serde = { version = "1.0.119", default-features = false, package = "alt_serde", features = ["derive", "alloc"] }
serde_alt = { version = "1", default-features = false, package = "alt_serde", features = ["derive", "alloc"], optional = true }
# serde-json-core = "0.5.0"
serde_json = { version = "1.0.61", package = "alt_serde_json", features = ["alloc"], default-features = false }
# lite-json = { version = "0.2.0", default-features = false, defaults = ["no_std"] }
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
# bs58 = { version = "0.4", default-features = false, features = ["check", "sha2"] }
# rust-base58 = "0.0.4"
# blake2-rfc = "0.2"
[dependencies.bcs-alt]
package = "bcs"
default-features = false
path="../../../sp-move-vm/bcs"

optional = true

[dev-dependencies]
# serde is for lcs/bcs and construct_runtime
# used for tests (std) only
pallet-vesting = { default-features = false, package = "pallet-vesting", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37' }
primitives = { path = "primitives" }
assets = { path = "assets" }
constants = { path = "constants" }
module-currencies = { path = "../currencies" }
orml-tokens = { default-features = false, git = 'https://github.com/open-web3-stack/open-runtime-module-library' }
orml-currencies = { default-features = false, git = 'https://github.com/open-web3-stack/open-runtime-module-library' }
serde = { package = "serde", version = "1.0" }
bcs = { package = "bcs", version = "0.1" }
env_logger = "0.9.0"
test-log = "0.2.8"

[dev-dependencies.move-vm-runtime]
path="../../../sp-move-vm/language/move-vm/runtime"

default-features = false

[features]
default = [
    "std",
]
std = [
    "serde_alt",
#  "serde_alt/std",
    "log/std",
    "assets/std",
    "move-vm/std",
    "move-vm-runtime/std",
    "move-core-types/std",
    "move-binary-format/std",
"sp-io/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "parity-scale-codec/std",
    "groupsign/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "timestamp/std",
    "getrandom/js",
    "balances/std",
    "orml-traits/std",
    "pallet-vesting/std",
]

runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "timestamp/runtime-benchmarks",
    "balances/runtime-benchmarks",

    # "serde-alt",
    "bcs-alt",
]

# Note: frame-support `try-runtime` feature is released after v3.
# Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
