[package]
name = "sp-mvm-rpc"
authors = [ "Pontem Network Team <https://pontem.network>" ]
description = "RPC for Move pallet."
edition = "2021"
repository = "https://github.com/pontem-network/pontem"
version = "0.2.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# jsonrpc-core = "18.0"
# jsonrpc-core-client = "18.0"
# jsonrpc-derive = "18.0"
jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }

sp-rpc = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37' }
sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37' }
# frame-support = {  default-features = false,git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37' }
sp-blockchain = {  git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37' }
sp-mvm-rpc-runtime = { version = "0.2.2", path = "./runtime" }
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0", features = [ "derive" ] }
fc-rpc-core = { version = "1.0.0" }
anyhow = { version = "1.0.43", default-features = false }
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
# serde_json = { version = "1.0.61", package = "alt_serde_json", features = ["alloc"], default-features = false }
serde_json = '1.0'
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.37' }

# [dependencies.parity-scale-codec]
# version = "3.0.0"
# default-features = false
# package = "parity-scale-codec"

# [dependencies.parity-scale-codec-derive]
# version = "3.0.0"
# default-features = false
# package = "parity-scale-codec-derive"

[dependencies.move-core-types]
path="../../../../sp-move-vm/language/move-core/types"
default-features = false

[dependencies.bcs-alt]
package = "bcs"
default-features = false
path="../../../../sp-move-vm/bcs"

[dependencies.move-vm]
package = "mvm"
path="../../../../sp-move-vm/mvm"
default-features = false
features = [ "move_stdlib" ]

# [dependencies.move-core-types]
# path="../../../sp-move-vm/language/move-core/types"
# default-features = false

[dependencies.move-binary-format]
path="../../../../sp-move-vm/language/move-binary-format"
default-features = false

[dependencies.move-resource-viewer]
path="../../../../sp-move-vm/language/tools/move-resource-viewer"
default-features = false
# [features]
# default = ["std"]
# std = [
# 	"frame-support/std",
# ]